# NodeYolo

./: README.md
agv_ros2_ws/: .dockerignore  .env.example  .gitignore  BUILD_REPORT.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  GITHUB_GUIDE.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.sh  monitor.sh  requirements.txt
agv_ros2_ws/scripts/: start_all.sh  start_simulation.sh  stop_all.sh
agv_ros2_ws/src/agv_3d_scanner/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_3d_scanner/agv_3d_scanner/: __init__.py  map_exporter.py  point_cloud_manager.py  scanner_node.py
agv_ros2_ws/src/agv_3d_scanner/config/: scanner_config.yaml
agv_ros2_ws/src/agv_3d_scanner/launch/: 3d_scanner.launch.py
agv_ros2_ws/src/agv_camera_manager/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_camera_manager/agv_camera_manager/: __init__.py  camera_manager_node.py
agv_ros2_ws/src/agv_camera_manager/config/: camera_config.yaml
agv_ros2_ws/src/agv_camera_manager/launch/: camera_manager.launch.py
agv_ros2_ws/src/agv_config/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_config/agv_config/: __init__.py  config_manager_node.py
agv_ros2_ws/src/agv_config/config/: default_config.yaml
agv_ros2_ws/src/agv_config/launch/: config_manager.launch.py
agv_ros2_ws/src/agv_connectivity/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_connectivity/agv_connectivity/: __init__.py  bluetooth_manager_node.py  connectivity_manager_node.py  wifi_manager_node.py
agv_ros2_ws/src/agv_connectivity/config/: connectivity_config.yaml
agv_ros2_ws/src/agv_connectivity/launch/: connectivity.launch.py
agv_ros2_ws/src/agv_interfaces/: CMakeLists.txt  package.xml
agv_ros2_ws/src/agv_interfaces/action/: NavigateTo.action  Patrol.action
agv_ros2_ws/src/agv_interfaces/msg/: AGVStatus.msg  BatteryState.msg  BluetoothDevice.msg  CameraConfig.msg  DriveCommand.msg  IOState.msg  MotorState.msg  PlcConfig.msg  PlcData.msg  PointCloudChunk.msg  Scan3DData.msg  SystemConfig.msg  WiFiStatus.msg  YoloDetection.msg  YoloResult.msg
agv_ros2_ws/src/agv_interfaces/srv/: ConnectBluetooth.srv  ConnectWiFi.srv  ControlAGV.srv  GenerateScanMap.srv  GetConfig.srv  ReadPlc.srv  SetCharging.srv  SetConfidence.srv  SetConfig.srv  SetIO.srv  SetModel.srv  SetPowerMode.srv  SetSpeed.srv  SetSteering.srv  StartScan.srv  TrainModel.srv  WritePlc.srv
agv_ros2_ws/src/agv_io_controller/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_io_controller/agv_io_controller/: __init__.py  io_controller_node.py  io_simulator_node.py
agv_ros2_ws/src/agv_io_controller/config/: io_config.yaml
agv_ros2_ws/src/agv_io_controller/launch/: io_controller.launch.py
agv_ros2_ws/src/agv_launch/: CMakeLists.txt  package.xml
agv_ros2_ws/src/agv_launch/config/: system_config.yaml
agv_ros2_ws/src/agv_launch/launch/: simulation.launch.py  system.launch.py
agv_ros2_ws/src/agv_motor_controller/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_motor_controller/agv_motor_controller/: __init__.py  motor_controller_node.py
agv_ros2_ws/src/agv_motor_controller/config/: motor_config.yaml
agv_ros2_ws/src/agv_motor_controller/launch/: motor_controller.launch.py
agv_ros2_ws/src/agv_navigation/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_navigation/agv_navigation/: __init__.py  agv_controller_node.py  agv_navigator_node.py  agv_odometry_node.py
agv_ros2_ws/src/agv_navigation/config/: navigation_config.yaml
agv_ros2_ws/src/agv_navigation/launch/: navigation.launch.py
agv_ros2_ws/src/agv_path_planner/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_path_planner/agv_path_planner/: __init__.py  path_planner_node.py  smooth_astar.py
agv_ros2_ws/src/agv_path_planner/config/: planner_config.yaml
agv_ros2_ws/src/agv_path_planner/launch/: path_planner.launch.py
agv_ros2_ws/src/agv_plc_bridge/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_plc_bridge/agv_plc_bridge/: __init__.py  modbus_tcp_node.py  plc_manager_node.py  plc_simulator.py
agv_ros2_ws/src/agv_plc_bridge/config/: plc_config.yaml
agv_ros2_ws/src/agv_plc_bridge/launch/: plc_bridge.launch.py
agv_ros2_ws/src/agv_power_manager/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_power_manager/agv_power_manager/: __init__.py  battery_monitor_node.py  charging_controller_node.py  power_manager_node.py
agv_ros2_ws/src/agv_power_manager/config/: power_config.yaml
agv_ros2_ws/src/agv_power_manager/launch/: power_manager.launch.py
agv_ros2_ws/src/agv_utils/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_utils/agv_utils/: __init__.py  cache.py  performance_monitor.py  ros_helpers.py  thread_pool.py
agv_ros2_ws/src/agv_utils/launch/: utils.launch.py
agv_ros2_ws/src/agv_video_stream/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_video_stream/agv_video_stream/: __init__.py  video_recorder_node.py  video_server_node.py
agv_ros2_ws/src/agv_video_stream/config/: video_config.yaml
agv_ros2_ws/src/agv_video_stream/launch/: video_stream.launch.py
agv_ros2_ws/src/agv_vision/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_vision/agv_vision/: __init__.py  camera_node.py  yolo_detector_node.py  yolo_trainer_node.py
agv_ros2_ws/src/agv_web_frontend/: index.html  package.json  package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_web_frontend/css/: style.css
agv_ros2_ws/src/agv_web_frontend/js/: app.js
agv_ros2_ws/src/agv_web_server/: package.xml  setup.cfg  setup.py
agv_ros2_ws/src/agv_web_server/agv_web_server/: __init__.py  api_routes.py  camera_manager.py  config_manager.py  database_manager.py  plc_manager.py  ros_bridge.py  vision_manager.py  web_server_node.py  websocket_handler.py
agv_ros2_ws/src/agv_web_server/config/: web_config.yaml
agv_ros2_ws/src/agv_web_server/launch/: web_server.launch.py
agv_ros2_ws/volumes/config/: .gitkeep
agv_ros2_ws/volumes/data/: .gitkeep
agv_ros2_ws/volumes/logs/: .gitkeep
(+3 files in other folders)
