<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_video_stream</name>
  <version>1.0.0</version>
  <description>ROS2 video streaming and recording package for AGV</description>
  <maintainer email="agv@example.com">AGV Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>image_transport</depend>
  <depend>agv_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
